2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* stickynotes.glade: Changed a few labels to fix bug
	#120693.

2004-05-16  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* stickynotes.glade: Use appropriate mnemonic widget id to display
	the font picker dialog. Fix bug #136961.
	Remove unnecessary accelerators and sentence capitalize the menu
	items of 'Click' behaviour. Fix bug #120695.

2004-05-16  Kevin Vandersloot <kfv101 psu edu>

	* stickynotes_applet_callbacks.c: free notes on exit
	
	* stickynotes.c: Make the title bar icons smaller and dont show/unshow on focus in/out. Fixes
	bug #126931

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Remove non-portable CFLAGS. Shouldn't override them
	anyway.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Online localized help from Sun's translation team for
	de, es, fr, it, ja, ko, sv, zh_CN, zh_TW and zh_HK.

2004-03-04  Chris Lahey  <clahey@rigger.boston.ximian.com>

	* stickynotes_applet.c (stickynotes_applet_init): Tell the session
	manager to ignore our windows.

2004-03-02  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* sticyknotes_applet.c (stickynotes_applet_update_prefs):
	Fix a compilation error. (Bugzilla #135820)
	
2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* stickynotes_applet_callback.c (menu_destroy_all_cb):
	Made event driven so it doesn't block different instances
	and made multihead aware. Also have only one dialog
	per instance.

	(destroy_all_response_cb):
	Added callback function for the menu_destroy_all_cb dialog.

	* stickynotes_applet.h:
	Added the dialog_destroy_all entry.

	* sticyknotes_applet.c (stickynotes_applet_new):
	Set the dialog_destroy_all NULL.

	* stickynotes_applet_callbacks.c (applet_destroy_cb):
	Destroy the dialog_destroy_all at instance destroy.

2004-02-19  Kevin Vandersloot

	* stickynotes_applet.c, stickynotes.c: Put in some sanity checks for gconf settings.
	Should at least prevent bug #124024

2004-02-18  Kevin Vandersloot
