@@ -81,9 +81,27 @@ gboolean applet_save_cb(StickyNotesApplet *applet)
 	return TRUE;
 }
 
-/* Applet Callback : Resize the applet. */
-gboolean applet_change_size_cb(GtkWidget *widget, gint size, StickyNotesApplet *applet)
+/* Applet Callback : Change the panel orientation. */
+void applet_change_orient_cb(PanelApplet *panel_applet, PanelAppletOrient orient, StickyNotesApplet *applet)
 {
+	applet->panel_orient = orient;
+
+	return;
+}
+
+/* Applet Callback : Resize the applet. */
+gboolean applet_size_allocate_cb(GtkWidget *widget, GtkAllocation *allocation, StickyNotesApplet *applet)
+{
+	if ((applet->panel_orient == PANEL_APPLET_ORIENT_UP) || (applet->panel_orient == PANEL_APPLET_ORIENT_DOWN)) {
+	  if (applet->panel_size == allocation->height)
+	    return;
+	  applet->panel_size = allocation->height;
+	} else {
+	  if (applet->panel_size == allocation->width)
+	    return;
+	  applet->panel_size = allocation->width;
+	}
+
 	stickynotes_applet_update_icon(applet);
 
 	return FALSE;
