@@ -1,3 +1,13 @@
+2004-08-09  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* stickynotes_applet.c: (stickynotes_applet_new),
+	(stickynotes_applet_update_icon):
+	* stickynotes_applet.h:
+	* stickynotes_applet_callbacks.c: (applet_change_orient_cb),
+	(applet_size_allocate_cb):
+	* stickynotes_applet_callbacks.h: Make applet follow panel sizes better
+	Closes bug #143934. Patch from Vincent Noel.
+
 2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* stickynotes.glade: Changed a few labels to fix bug
